--- a/Nucleus/NucleusAssets.targets
+++ b/Nucleus/NucleusAssets.targets
@@ -4,26 +4,22 @@
 		<IsOSX Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::OSX)))' == 'true'">true</IsOSX>
 		<IsLinux Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))' == 'true'">true</IsLinux>
 	</PropertyGroup>
+	
+	<Target Name="NucleusPreBuild" BeforeTargets="PreBuildEvent">
+		<ItemGroup>
+			<UniversalAssets_Nucleus Include="$(MSBuildThisFileDirectory)\BuildAssets\universal\**\*" />
+		</ItemGroup>
+		<Copy SourceFiles="@(UniversalAssets_Nucleus)" DestinationFolder="$(OutDir)%(RecursiveDir)" SkipUnchangedFiles="true" />
 
-	<ItemGroup>
-		<Content Include="$(MSBuildThisFileDirectory)\BuildAssets\universal\**\*">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</Content>
-	</ItemGroup>
-
-	<ItemGroup Condition="'$(IsWindows)' == 'true'">
-		<Content Include="$(MSBuildThisFileDirectory)\BuildAssets\winnt\**\*">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</Content>
-	</ItemGroup>
-	<ItemGroup Condition="'$(IsOSX)' == 'true'">
-		<Content Include="$(MSBuildThisFileDirectory)\BuildAssets\intel_osx\**\*">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</Content>
-	</ItemGroup>
-	<ItemGroup Condition="'$(IsLinux)' == 'true'">
-		<Content Include="$(MSBuildThisFileDirectory)\BuildAssets\linux\**\*">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</Content>
-	</ItemGroup>
+		<ItemGroup Condition="'$(IsWindows)' == 'true'">
+			<PlatformAssets_Nucleus Include="$(MSBuildThisFileDirectory)\BuildAssets\winnt\**\*" />
+		</ItemGroup>
+		<ItemGroup Condition="'$(IsOSX)' == 'true'">
+			<PlatformAssets_Nucleus Include="$(MSBuildThisFileDirectory)\BuildAssets\intel_osx\**\*" />
+		</ItemGroup>
+		<ItemGroup Condition="'$(IsLinux)' == 'true'">
+			<PlatformAssets_Nucleus Include="$(MSBuildThisFileDirectory)\BuildAssets\linux\**\*" />
+		</ItemGroup>
+		<Copy SourceFiles="@(PlatformAssets_Nucleus)" DestinationFolder="$(OutDir)%(RecursiveDir)" SkipUnchangedFiles="true" />
+	</Target>
 </Project>
